# cameras

./: Cargo.toml  README.md  justfile  mediamtx.yml
.claude/: settings.local.json
apps/dioxus-demo/: Cargo.toml
apps/dioxus-demo/assets/: app.css
apps/dioxus-demo/src/: main.rs
apps/egui-demo/: Cargo.toml
apps/egui-demo/src/: main.rs
crates/cameras/: Cargo.toml  README.md
crates/cameras/examples/: monitor.rs  pump.rs  snapshot.rs
crates/cameras/src/: analysis.rs  backend.rs  controls.rs  error.rs  lib.rs  linux.rs  macos.rs  pump.rs  rtsp.rs  types.rs  unknown.rs  windows.rs
crates/cameras/src/macos/: controls.rs  delegate.rs  monitor.rs  session.rs
crates/chimeras/: Cargo.toml  README.md
crates/chimeras/examples/: monitor.rs  pump.rs  snapshot.rs
crates/chimeras/src/: backend.rs  convert.rs  lib.rs  monitor.rs  pump.rs  source.rs
crates/dioxus-cameras/: Cargo.toml  README.md
crates/dioxus-cameras/assets/: preview.js
crates/dioxus-cameras/src/: camera_stream.rs  channel.rs  component.rs  devices.rs  lib.rs  registry.rs  server.rs  streams.rs
crates/dioxus-chimeras/: Cargo.toml  README.md
crates/dioxus-chimeras/src/: camera_stream.rs  component.rs  devices.rs  lib.rs  poison.rs  registry.rs  server.rs  streams.rs
crates/egui-cameras/: Cargo.toml  README.md
crates/egui-cameras/src/: lib.rs
crates/egui-chimeras/: Cargo.toml  README.md
crates/egui-chimeras/src/: lib.rs
demo/assets/: app.css  preview.js
demo/src/: main.rs
src/: rtsp.rs
src/decode/: macos.rs  windows.rs
